# drf-auth

./: db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
dino/: admin.py  apps.py  models.py  permissions.py  serializer.py  views.py
dino/migrations/: 0001_initial.py
dinoauth/: asgi.py  settings.py  urls.py  wsgi.py
